--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -125,7 +125,7 @@
 <body>
 	
 <header>
-	<div id="fixedlinksframe"><% Html.RenderPartial("~/views/home/fixedlinks.ascx")%></div>
+	<div id="fixedlinksframe" style="display: none;"><% Html.RenderPartial("~/views/home/fixedlinks.ascx")%></div>
 </header>
 
 
