Made workframe forms full height.

--- a/Web Apps/DMI.NET/DMI.NET/Content/Site.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/Site.css
@@ -40,7 +40,7 @@ header { height: 126px;}
 	overflow: auto;
 	}
 
-
+#workframe { height: 100%;}
 
 /* Styles for basic forms
 -----------------------------------------------------------*/
