--- a/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
@@ -593,3 +593,12 @@ table.calendarcell
 	
 }
 
+
+
+#popupwindow {
+    position:absolute;
+    width:400px;
+    height:400px;
+    border:5px solid #000;
+    z-index: 9002;
+}
