--- a/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
@@ -594,11 +594,16 @@ table.calendarcell
 }
 
 
-
-#popupwindow {
-    position:absolute;
-    width:400px;
-    height:400px;
-    border:5px solid #000;
-    z-index: 9002;
+.popup
+{
+    width: 800px;
+    border-radius: 7px;
+    background: #6b6a63;
+    margin: 30px auto 0;
+    padding: 6px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -400px;
+    margin-top: -40px;
 }
