--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -7,17 +7,7 @@
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
-   <script src="<%: Url.LatestContent("~/Scripts/jquery-1.8.3.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/openhr.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetFont.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetStyles.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery-ui-1.9.2.custom.min.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.cookie.js")%>" type="text/javascript"></script>	 	
-   <script src="<%: Url.LatestContent("~/Scripts/menu.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.ui.touch-punch.min.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jsTree/jquery.jstree.js")%>" type="text/javascript"></script>
-	<script id="officebarscript" src="<%: Url.LatestContent("~/Scripts/officebar/jquery.officebar.js")%>" type="text/javascript"></script>	
-		
+    
 	<% 
 		' Mobiles. Fix as tiles display.
 		Dim ua As String = Request.UserAgent
@@ -43,9 +33,24 @@
 	<%--<link href="<%: Url.LatestContent("~/Scripts/officebar/jquery.ribbon.css") %>" rel="stylesheet" type="text/css" />--%>
     <%--<link href="<%: Url.LatestContent("~/Content/jquery-ui-1.9.2.custom.css")%>" rel="stylesheet" type="text/css" />--%>
     <link href="<%: Url.LatestContent("~/Content/themes/base/jquery-ui.css")%>" rel="stylesheet" type="text/css"/>
+    <link href="<%: Url.LatestContent("~/Content/ui.jqgrid.css")%>" rel="stylesheet" type="text/css"/>
 
 	<link id="layoutLink" href="" rel="stylesheet" type="text/css" />
-	<link id="themeLink" href="" rel="stylesheet" type="text/css" />
+	<link id="themeLink" href="" rel="stylesheet" type="text/css" />    
+
+   <script src="<%: Url.LatestContent("~/Scripts/jquery-1.8.3.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/openhr.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetFont.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetStyles.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/jquery-ui-1.9.2.custom.min.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/jquery.cookie.js")%>" type="text/javascript"></script>	 	
+   <script src="<%: Url.LatestContent("~/Scripts/menu.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/jquery.ui.touch-punch.min.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/jsTree/jquery.jstree.js")%>" type="text/javascript"></script>
+	<script id="officebarscript" src="<%: Url.LatestContent("~/Scripts/officebar/jquery.officebar.js")%>" type="text/javascript"></script>	
+    <script src="<%: Url.LatestContent("~/Scripts/jquery.jqGrid.min.js")%>" type="text/javascript"></script>
+    
+
 
 	<script type="text/javascript">
 		$(document).ready(function () {
