--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -161,6 +161,9 @@
 			}
 		}
 
+        //set up ROOT variable for use in external JS files.
+	    window.ROOT = '<%= Url.Content("~/") %>';
+        
 	</script>
 
 </head>
