--- a/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
@@ -563,7 +563,7 @@ table.calendarcell
 	cursor: pointer;
 	background-color: rgb(192, 216, 240);
 	border-bottom: 1px solid white;
-	font-family: segoe UI light;
+	font-family: Segoe UI Light, Verdana, "Open Sans", Tahoma, Helvetica, sans-serif;
 	padding-left: 8px;
 
    /* Chuck all possibilities at the browser for gradients... */
