--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -5,73 +5,69 @@
 <head runat="server">
    <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
 
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	  	
+	<%--<meta name="apple-mobile-web-app-capable" content="yes" />--%>
 	
-				<!-- ipad -->
-	        <link href="Content/images/ABSLogo/OpenHRLogo748x1024.png"
-              media="(device-width: 768px) and (device-height: 1024px)
+	<%--Keep these media queries inline - external stylesheets cause a delay--%>
+	<!-- ipad -->
+	<link href="Content/images/ABSLogo/OpenHRLogo748x1024.png"
+		media="(device-width: 768px) and (device-height: 1024px)
                  and (orientation: landscape)
                  and (-webkit-device-pixel-ratio: 1)"
-              rel="apple-touch-startup-image">
-	
-        <!-- iPhone -->
-        <link href="~/Content/images/ABSLogo/OpenHRLogo57.png"
-              sizes="57x57"
-              rel="apple-touch-icon">
-        <link href="~/Content/images/ABSLogo/OpenHRLogo320x460.png"
-              media="(device-width: 320px) and (device-height: 480px)
+		rel="apple-touch-startup-image">
+
+	<!-- iPhone -->
+	<link href="~/Content/images/ABSLogo/OpenHRLogo57.png"
+		sizes="57x57"
+		rel="apple-touch-icon">
+	<link href="~/Content/images/ABSLogo/OpenHRLogo320x460.png"
+		media="(device-width: 320px) and (device-height: 480px)
                  and (-webkit-device-pixel-ratio: 1)"
-              rel="apple-touch-startup-image">
- 
-        <!-- iPhone (Retina) -->
-        <link href="~/Content/images/ABSLogo/OpenHRLogo114.png"
-              sizes="114x114"
-              rel="apple-touch-icon">
-        <link href="~/Content/images/ABSLogo/OpenHRLogo640x920.png"
-              media="(device-width: 320px) and (device-height: 480px)
+		rel="apple-touch-startup-image">
+
+	<!-- iPhone (Retina) -->
+	<link href="~/Content/images/ABSLogo/OpenHRLogo114.png"
+		sizes="114x114"
+		rel="apple-touch-icon">
+	<link href="~/Content/images/ABSLogo/OpenHRLogo640x920.png"
+		media="(device-width: 320px) and (device-height: 480px)
                  and (-webkit-device-pixel-ratio: 2)"
-              rel="apple-touch-startup-image">
- 
-        <!-- iPhone 5 -->
-        <link href="~/Content/images/ABSLogo/OpenHRLogo640x1096.png"
-              media="(device-width: 320px) and (device-height: 568px)
+		rel="apple-touch-startup-image">
+
+	<!-- iPhone 5 -->
+	<link href="~/Content/images/ABSLogo/OpenHRLogo640x1096.png"
+		media="(device-width: 320px) and (device-height: 568px)
                  and (-webkit-device-pixel-ratio: 2)"
-              rel="apple-touch-startup-image">
- 
-        <!-- iPad -->
-        <link href="~/Content/images/ABSLogo/OpenHRLogo72.png"
-              sizes="72x72"
-              rel="apple-touch-icon">
-        <link href="~/Content/images/ABSLogo/OpenHRLogo768x1004.png"
-              media="(device-width: 768px) and (device-height: 1024px)
+		rel="apple-touch-startup-image">
+
+	<!-- iPad -->
+	<link href="~/Content/images/ABSLogo/OpenHRLogo72.png"
+		sizes="72x72"
+		rel="apple-touch-icon">
+	<link href="~/Content/images/ABSLogo/OpenHRLogo768x1004.png"
+		media="(device-width: 768px) and (device-height: 1024px)
                  and (orientation: portrait)
                  and (-webkit-device-pixel-ratio: 1)"
-              rel="apple-touch-startup-image">
-        <link href="~/Content/images/ABSLogo/OpenHRLogo748x1024.png"
-              media="(device-width: 768px) and (device-height: 1024px)
+		rel="apple-touch-startup-image">
+	<link href="~/Content/images/ABSLogo/OpenHRLogo748x1024.png"
+		media="(device-width: 768px) and (device-height: 1024px)
                  and (orientation: landscape)
                  and (-webkit-device-pixel-ratio: 1)"
-              rel="apple-touch-startup-image">
- 
-        <!-- iPad (Retina) -->
-        <link href="~/Content/images/ABSLogo/OpenHRLogo144.png"
-              sizes="144x144"
-              rel="apple-touch-icon">
-        <link href="~/Content/images/ABSLogo/OpenHRLogo1536x2008.png"
-              media="(device-width: 768px) and (device-height: 1024px)
+		rel="apple-touch-startup-image">
+
+	<!-- iPad (Retina) -->
+	<link href="~/Content/images/ABSLogo/OpenHRLogo144.png"
+		sizes="144x144"
+		rel="apple-touch-icon">
+	<link href="~/Content/images/ABSLogo/OpenHRLogo1536x2008.png"
+		media="(device-width: 768px) and (device-height: 1024px)
                  and (orientation: portrait)
                  and (-webkit-device-pixel-ratio: 2)"
-              rel="apple-touch-startup-image">
-        <link href="~/Content/images/ABSLogo/OpenHRLogo1496x2048.png"
-              media="(device-width: 768px) and (device-height: 1024px)
+		rel="apple-touch-startup-image">
+	<link href="~/Content/images/ABSLogo/OpenHRLogo1496x2048.png"
+		media="(device-width: 768px) and (device-height: 1024px)
                  and (orientation: landscape)
                  and (-webkit-device-pixel-ratio: 2)"
-              rel="apple-touch-startup-image">
-
-
-
-
+		rel="apple-touch-startup-image">
     
 	<% 
 		' Mobiles. Fix as tiles display.
@@ -85,41 +81,48 @@
 				currentLayout = "tiles"
 			End If
 		End If
-	%>	
-
+	%>
+	
+	<%--Here's the stylesheets for the font-icons displayed on the dashboard for wireframe and tile layouts--%>
 	<link href="<%= Url.LatestContent("~/Content/general_enclosed_foundicons.css")%>" rel="stylesheet" type="text/css" />
 	<link href="<%= Url.LatestContent("~/Content/font-awesome.css")%>" rel="stylesheet" type="text/css" />
-
-	<link href="<%: Url.LatestContent("~/Content/Site.css")%>" rel="stylesheet" type="text/css"/>
-	<link href="<%: Url.LatestContent("~/Content/OpenHR.css")%>" rel="stylesheet" type="text/css"/>
-
-	<%--<link href="<%: Url.LatestContent("~/Content/dragdrop/styles.css") %>" rel="stylesheet" type="text/css" />--%>
+	
+	<%--Base stylesheets--%>
+	<link href="<%: Url.LatestContent("~/Content/Site.css")%>" rel="stylesheet" type="text/css" />
+	<link href="<%: Url.LatestContent("~/Content/OpenHR.css")%>" rel="stylesheet" type="text/css" />
+	
+	<%--stylesheet for slide-out dmi menu--%>
 	<link href="<%: Url.LatestContent("~/Content/contextmenustyle.css")%>" rel="stylesheet" type="text/css" />
-	<%--<link href="<%: Url.LatestContent("~/Scripts/officebar/jquery.ribbon.css") %>" rel="stylesheet" type="text/css" />--%>
-    <%--<link href="<%: Url.LatestContent("~/Content/jquery-ui-1.9.2.custom.css")%>" rel="stylesheet" type="text/css" />--%>
-    <link href="<%: Url.LatestContent("~/Content/themes/redmond/jquery-ui.css")%>" rel="stylesheet" type="text/css"/>
-    <link href="<%: Url.LatestContent("~/Content/ui.jqgrid.css")%>" rel="stylesheet" type="text/css"/>
-
+	
+	<%--ThemeRoller stylesheet--%>
+	<link href="<%: Url.LatestContent("~/Content/themes/redmond/jquery-ui.css")%>" rel="stylesheet" type="text/css" />
+	
+	<%--jQuery Grid Stylesheet--%>
+	<link href="<%: Url.LatestContent("~/Content/ui.jqgrid.css")%>" rel="stylesheet" type="text/css" />
+	
+	<%--Placeholders for theme and layout--%>
 	<link id="layoutLink" href="" rel="stylesheet" type="text/css" />
-	<link id="themeLink" href="" rel="stylesheet" type="text/css" />    
-
-   <script src="<%: Url.LatestContent("~/Scripts/jquery-1.8.3.js")%>" type="text/javascript"></script>
+	<link id="themeLink" href="" rel="stylesheet" type="text/css" />
+	
+	<%--External script resources--%>
+	<script src="<%: Url.LatestContent("~/Scripts/jquery-1.8.3.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/openhr.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetFont.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetStyles.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/jquery-ui-1.9.2.custom.min.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.cookie.js")%>" type="text/javascript"></script>	 	
-   <script src="<%: Url.LatestContent("~/Scripts/menu.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/jquery.cookie.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/menu.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/jquery.ui.touch-punch.min.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/jsTree/jquery.jstree.js")%>" type="text/javascript"></script>
-	<script id="officebarscript" src="<%: Url.LatestContent("~/Scripts/officebar/jquery.officebar.js")%>" type="text/javascript"></script>	
-    <script src="<%: Url.LatestContent("~/Scripts/jquery.jqGrid.min.js")%>" type="text/javascript"></script>
-    
-<OBJECT classid="clsid:5220cb21-c88d-11cf-b347-00aa00a28331" 
-	id="Microsoft_Licensed_Class_Manager_1_0" 
-	VIEWASTEXT>
-	<PARAM NAME="LPKPath" VALUE="<%: Url.Content("~/lpks/ssmain.lpk")%>">
-</OBJECT>
+	<script id="officebarscript" src="<%: Url.LatestContent("~/Scripts/officebar/jquery.officebar.js")%>" type="text/javascript"></script>
+	<script src="<%: Url.LatestContent("~/Scripts/jquery.jqGrid.min.js")%>" type="text/javascript"></script>
+
+	<%--licence manager reference for activeX--%>
+	<object classid="clsid:5220cb21-c88d-11cf-b347-00aa00a28331"
+		id="Microsoft_Licensed_Class_Manager_1_0"
+		viewastext>
+		<param name="LPKPath" value="<%: Url.Content("~/lpks/ssmain.lpk")%>">
+	</object>
 
 
 	<script type="text/javascript">
