--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -86,7 +86,9 @@
 	<%--Here's the stylesheets for the font-icons displayed on the dashboard for wireframe and tile layouts--%>
 	<link href="<%= Url.LatestContent("~/Content/general_enclosed_foundicons.css")%>" rel="stylesheet" type="text/css" />
 	<link href="<%= Url.LatestContent("~/Content/font-awesome.css")%>" rel="stylesheet" type="text/css" />
+	<link href="<%= Url.LatestContent("~/Content/fonts/SSI80v194934/style.css")%>" rel="stylesheet" />
 	
+
 	<%--Base stylesheets--%>
 	<link href="<%: Url.LatestContent("~/Content/Site.css")%>" rel="stylesheet" type="text/css" />
 	<link href="<%: Url.LatestContent("~/Content/OpenHR.css")%>" rel="stylesheet" type="text/css" />
@@ -116,6 +118,9 @@
 	<script src="<%: Url.LatestContent("~/Scripts/jsTree/jquery.jstree.js")%>" type="text/javascript"></script>
 	<script id="officebarscript" src="<%: Url.LatestContent("~/Scripts/officebar/jquery.officebar.js")%>" type="text/javascript"></script>
 	<script src="<%: Url.LatestContent("~/Scripts/jquery.jqGrid.min.js")%>" type="text/javascript"></script>
+	
+	<%--Load the OpenHR menu js file --%>
+	<script src="<%: Url.LatestContent("~/Scripts/FormScripts/menu.js")%>" type="text/javascript"></script>
 
 	<%--licence manager reference for activeX--%>
 	<object classid="clsid:5220cb21-c88d-11cf-b347-00aa00a28331"
@@ -242,24 +247,10 @@
 		}
 
         //set up ROOT variable for use in external JS files.
-	    window.ROOT = '<%= Url.Content("~/") %>';
-        
-	</script>
-
+	    window.ROOT = '<%= Url.Content("~/") %>';       
+</script>
 </head>
 <body>
-	
-<header>
-	<div id="fixedlinksframe" style="display: none;"><% Html.RenderPartial("~/views/home/fixedlinks.ascx")%></div>
-</header>
-
-
-<asp:ContentPlaceHolder ID="MainContent" runat="server">
-</asp:ContentPlaceHolder>
-
-    
-<div class="modal"><!-- AJAX please wait spinner --></div>    
-<div id="About"><%Html.RenderPartial("~/views/account/about.ascx")%></div>
-
+<header><div id="fixedlinksframe" style="display: none;"><% Html.RenderPartial("~/views/home/fixedlinks.ascx")%></div></header><asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder><div class="modal"><!-- AJAX please wait spinner --></div><div id="About"><%Html.RenderPartial("~/views/account/about.ascx")%></div>
 </body>
 </html>
