--- a/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/themes/Blue.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/themes/Blue.css
@@ -1,4 +1,4 @@
-﻿body {background-color: rgb(7, 55, 99);color: White;
+﻿body {background-color: rgb(7, 55, 99)!important;color: White;
       	font-family: Segoe UI, Verdana, "Open Sans", Tahoma,Helvetica,sans-serif; }
       	
 li:visited { color: white;}      	
