--- a/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/tiles.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/tiles.css
@@ -208,7 +208,7 @@ li {list-style: none;}
 .RecDescPhoto, .RecordDescription { display: none;}
 
 .FixedLinksLeft {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -246,3 +246,16 @@ div.officetab li div.button
 
 div.officebar ul li.current > a { display: none;}
 div.officetab div.panel > span { display: none;}
+
+
+/* SSI Specific styling for shared screens go here:*/ 
+
+#findGridRow td {
+	font-size: 14pt;
+	padding: 8px 0 8px 8px;	
+}
+
+#row3 td { color: white;}
+
+
+
