--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="VB" Inherits="System.Web.Mvc.ViewMasterPage" %>
 <%@Import namespace="DMI.NET" %>
+
 <!DOCTYPE html>
 <html>
 <head runat="server">
@@ -102,26 +103,17 @@
 	<%--jQuery Grid Stylesheet--%>
 	<link href="<%: Url.LatestContent("~/Content/ui.jqgrid.css")%>" rel="stylesheet" type="text/css" />
 	
+
 	<%--Placeholders for theme and layout--%>
 	<link id="layoutLink" href="" rel="stylesheet" type="text/css" />
 	<link id="themeLink" href="" rel="stylesheet" type="text/css" />
 	
-	<%--External script resources--%>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery-1.8.3.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/openhr.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetFont.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/ctl_SetStyles.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery-ui-1.9.2.custom.min.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.cookie.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/menu.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.ui.touch-punch.min.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jsTree/jquery.jstree.js")%>" type="text/javascript"></script>
-	<script id="officebarscript" src="<%: Url.LatestContent("~/Scripts/officebar/jquery.officebar.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.jqGrid.min.js")%>" type="text/javascript"></script>
-	<script src="<%: Url.LatestContent("~/Scripts/jquery.maskedinput.js")%>" type="text/javascript"></script>
 
-	<%--Load the OpenHR menu js file --%>
-	<script src="<%: Url.LatestContent("~/Scripts/FormScripts/menu.js")%>" type="text/javascript"></script>
+	<%--External script resources--%>
+    <script src="<%: Url.Content("~/bundles/jQuery")%>" type="text/javascript"></script>
+    <script src="<%: Url.Content("~/bundles/jQueryUI7")%>" type="text/javascript"></script>
+    <script src="<%: Url.Content("~/bundles/Microsoft")%>" type="text/javascript"></script>
+    <script src="<%: Url.Content("~/bundles/OpenHR_General")%>" type="text/javascript"></script>
 
 	<%--licence manager reference for activeX--%>
 	<object classid="clsid:5220cb21-c88d-11cf-b347-00aa00a28331"
@@ -132,6 +124,7 @@
 
 
 	<script type="text/javascript">
+
 		$(document).ready(function () {
 
 			$("#About").dialog({
