--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -130,7 +130,7 @@
 			$("#About").dialog({
 				autoOpen: false,
 				modal: true,
-				width: 650
+				width: 450
 			});
 
 			$("#errorDialog").dialog({
@@ -259,7 +259,7 @@
 	<div class="modal">
 		<!-- AJAX please wait spinner -->
 	</div>
-	<div id="About"><%Html.RenderPartial("~/views/account/about.ascx")%></div>
+	<div id="About" title="About OpenHR"><%Html.RenderPartial("~/views/account/about.ascx")%></div>
 	
 	
 	<div id="errorDialog" title="AJAX call failed.">
