--- a/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/winkit.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/winkit.css
@@ -245,7 +245,7 @@ body
 
 .officebar i { display: none;}
 .officebar h6 {
-	font-size: 93%;
+	font-size: 85%;
 	margin: 0;
 	font-weight: lighter;
 }
@@ -254,7 +254,7 @@ body
 div.officebar {
   /*background:#BFDBFF;   remmed for themeroller*/
   float:none;
-  font-size:93%;
+  font-size:85%;
   line-height:normal;
   /*width:100%;*/
   height:auto;
@@ -484,13 +484,14 @@ div.officetab li div.button {
   display: inline-block;
   position: relative;
   float: left;
-  top: -84px;
+  top: -87px;
   left: 0px;
   height: 66px;
-  width: 49px;
+  /*width: 49px;*/
   overflow: hidden;
   line-height: normal;
 	border: 1px solid transparent;
+	padding: 0 4px 5px 4px;
 }
 
 div.officetab li div.list, div.officetab li div.textlist {
