--- a/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
+++ b/Web Apps/DMI.NET/DMI.NET/Views/Shared/Site.Master
@@ -151,6 +151,10 @@
 				$("select").addClass("ui-widget ui-widget-content ui-corner-all");
 				$("select").removeClass("text");
 
+				$("input[type=submit], input[type=button], button").removeClass("ui-corner-all");
+				$("input[type=submit], input[type=button], button").addClass("ui-corner-tl ui-corner-br");
+
+
 			});
 			
 			$("button").css("margin", "5px");
